feat: create contact directory and add Contact.css and Contact.js

--- a/src/components/chef/Chef.css
+++ b/src/components/chef/Chef.css
@@ -51,7 +51,7 @@
   margin: 0 10px;
   display: inline-block;
 }
-.chefs .member .social a:hover {
+.chefs .member .social .icon-hover:hover {
   color: #cda45e;
 }
 .chefs .member .social i {
